# seacat-auth

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  mkdocs-docker-serve.sh  mkdocs.yml  pyproject.toml  seacatauth.py  setup.cfg
.github/workflows/: ci.yml
doc/: README.md  bouncer.md  cookie.md  credentials-policy.md  external-login.md  ldap.md  mail.md  oauth2.md  postman.md  provisioning.md  seacat-auth-api.postman_collection.json
doc/docker/: README.md  docker-compose.yml
doc/docker/demo-app/: Dockerfile  demoapp.conf  demoapp.py
doc/docker/microservice/: Dockerfile  test_microservice.py
doc/docker/nginx-conf/: nginx-http.conf  nginx-https.conf  nginx-localhost.conf  nginx-localhost.conf.example  nginx-multisubdomain.conf.example  nginx-secure.conf.example  nginx-tenant-validation.conf.example  nginx.conf
doc/docker/nginx-root/: index.html
doc/docker/seacatauth-conf/: htpasswd  seacatauth.conf
doc/nginx-examples/: nginx-anonymous.conf  nginx-http.conf  nginx-multisubdomain.conf
doc/static/: README.md  kickstart.html
docs/: ai_translator.py  index.md
docs/access/: key-terms.md  resources.md  sessions.md
docs/admin/: index.md
docs/config/: basic-configuration.md  bouncer.md  clients-configuration.md  cookies.md  docker.md  external-login.md  index.md  ldap.md  mail-server.md  notifications-configuration.md  oauth2-introspect.md  provisioning.md  roles-configuration.md  tenants-configuration.md
docs/config/authentication/: hardware-key.md  otp.md  passwords.md  sms.md
docs/config/credentials/: credentials-policy.md  index.md  providers.md
docs/cs/: Dockerfile  mkdocs.yml
docs/cs/docs/: index.md
docs/development/: index.md  oauth2.md  postman.md  rest-api.md  unit-test.md
docs/en/: mkdocs-docker-serve.sh  mkdocs.yml
docs/en/docs/: index.md
docs/features/: features.md  index.md
docs/getting-started/: index.md  quick-start.md  recommended-deployment.md
docs/installation/: provisioning.md  quick-start.md
docs/integrations/: elk.md  grafana.md  index.md  jupyter-notebook.md  kafdrop.md  the-hive.md
docs/reference/: architecture.md  clients.md  credentials.md  rbac.md  resources.md  rest-api.md  roles.md  session.md  tenants.md
docs/user/: account-details.md  change-password.md  index.md  login.md  otp.md  roles.md  tenants.md
docs/webui/: index.md  key-terms.md  seacat-auth-web-ui.md  seacat-auth.md  seacat.md
etc/: config-schema.json  htpasswd  login-descriptors.json  seacatauth.conf
etc/message_templates/email/: cs-invitation.html  cs-password_reset.html  cs-password_reset_welcome.html  cs-registration_link.html  cs-self_registration.html  en-invitation.html  en-password_reset.html  en-password_reset_welcome.html  en-registration_link.html  en-self_registration.html  en-welcome_password_reset.html
etc/message_templates/sms/: cs-login_otp.txt  cs-password_reset.txt  cs-password_reset_welcome.txt  en-login_otp.txt  en-password_reset.txt  en-password_reset_welcome.txt  en-welcome_password_reset.txt
example/: openmetrics-output.txt  web-authn-oauth.py
example/docker/: docker-compose.yml
example/docker/nginx-conf/: nginx.conf
example/docker/seacatauth-conf/: example-login-descriptors.json  seacatauth.conf
example/nginx-config/: nginx-anonymous.conf  nginx-http.conf  nginx-multisubdomain.conf  nginx-websocket-authorization.conf
scripts/: group-map-example.yaml  ldap-access-sync.py  ldap-group-map-example.yaml  reset-password.py
seacatauth/: __init__.py  app.py  auth_provider.py  contextvars.py  decorators.py  events.py  exceptions.py  generic.py  middleware.py  tenant_provider.py
seacatauth/api/: __init__.py  auth.py  tenant.py
seacatauth/apikey/: __init__.py  handler.py  service.py
seacatauth/audit/: __init__.py  codes.py  handler.py  service.py
seacatauth/authn/: __init__.py  handler.py  login_descriptor.py  login_session.py  m2m.py  provider.py  schema.py  service.py
seacatauth/authn/handler/: account.py  admin.py  public.py
seacatauth/authn/login_factors/: __init__.py  abc.py  password.py  smscode.py  subnet.py  totp.py  webauthn.py  xheader.py
seacatauth/authn/otp/: __init__.py  handler.py  schema.py  service.py
seacatauth/authn/webauthn/: __init__.py  fms.py  handler.py  schema.py  service.py
seacatauth/authz/: __init__.py  utils.py
seacatauth/authz/rbac/: handler.py  service.py
seacatauth/authz/resource/: handler.py  schema.py  service.py
seacatauth/authz/role/: __init__.py  service.py  utils.py
seacatauth/batman/: __init__.py  elasticsearch.py  elk.py  grafana.py  handler.py  kibana.py  service.py  utils.py
seacatauth/bouncer/: __init__.py  handler.py  service.py
seacatauth/client/: __init__.py  exceptions.py  handler.py  schema.py  service.py
seacatauth/client/provider/: __init__.py  abc.py  mongodb.py
seacatauth/communication/: __init__.py  abc.py  email_smtp.py  service.py  sms_smsbranacz.py
seacatauth/communication/builders/: __init__.py  abc.py  email.py  sms.py
seacatauth/cookie/: __init__.py  handler.py  service.py  utils.py
seacatauth/credentials/: __init__.py  changepwd.py  handler.py  policy.py  schema.py  schemas.py  service.py  utils.py
seacatauth/external_login/: __init__.py  exceptions.py  handler.py  service.py  utils.py
seacatauth/feature/: __init__.py  handler.py  service.py
seacatauth/last_activity/: __init__.py  codes.py  service.py
seacatauth/models/: __init__.py  client.py  const.py  session.py
seacatauth/nameproposer/: __init__.py  adjectives.py  animals.py  service.py
seacatauth/openidconnect/: __init__.py  authentication.py  exceptions.py  pkce.py  service.py  session.py  utils.py
seacatauth/otp/: __init__.py  handler.py  service.py
seacatauth/provisioning/: __init__.py  service.py
seacatauth/session/: __init__.py  adapter.py  algorithmic.py  builders.py  handler.py  service.py  token.py
seacatauth/tenant/: __init__.py  handler.py  random_name.py  schema.py  schemas.py  service.py
test/: __init__.py  test_app_url_preparation.py  test_oauth_url.py  test_rbac.py
(+177 files in other folders)
