[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "seacat-auth"
version = "26.15.0"
description = "SeaCat Auth is a microservice that provides authentication, authorization, identity management, session management and other access control features."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["TeskaLabs Ltd <support@teskalabs.com>"]
maintainers = ["TeskaLabs Ltd <support@teskalabs.com>"]
keywords = [
    "authentication",
    "authorization",
    "identity",
    "session-management",
    "openid-connect",
    "oauth2",
    "rbac",
    "microservice",
    "access-control",
    "webauthn",
    "2fa",
    "mfa",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
packages = [{include = "seacatauth"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "*"
aiosmtplib = "*"
motor = "*"
cryptography = "*"
jwcrypto = ">=0.9.1"
fastjsonschema = "*"
bcrypt = "*"
argon2-cffi = "*"
aiomysql = "*"
jinja2 = "*"
pyotp = "*"
webauthn = "*"
pyyaml = "*"
pysaml2 = "*"
pymongo = "*"
sentry-sdk = "*"
asab = {git = "https://github.com/TeskaLabs/asab.git", extras = ["encryption"]}

# Optional extras (installed via poetry install -E ldap)
python-ldap = { version = "*", optional = true }

[tool.poetry.extras]
ldap = ["python-ldap"]

# Development dependency groups - these are independent from main deps
# Use 'poetry install --only lint' to install just flake8 (no main deps!)
[tool.poetry.group.lint.dependencies]
flake8 = "*"

[tool.poetry.group.test.dependencies]
pymongo = "*"
bcrypt = "*"
argon2-cffi = "*"
jwcrypto = ">=0.9.1"
asab = {git = "https://github.com/TeskaLabs/asab.git", extras = ["encryption"]}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

# No CLI entry point defined - the application is started via seacatauth.py

[tool.poetry.urls]
"Homepage" = "https://github.com/TeskaLabs/seacat-auth"
"Documentation" = "https://docs.teskalabs.com/seacat-auth"
"Docker Image" = "https://hub.docker.com/r/teskalabs/seacat-auth"
"Changelog" = "https://github.com/TeskaLabs/seacat-auth/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/TeskaLabs/seacat-auth/issues"

[tool.flake8]
# From setup.cfg - flake8 configuration
ignore = ["W191", "W503", "E117", "E501", "E303", "E301"]
